--- a/index.html
+++ b/index.html
@@ -134,8 +134,8 @@
             <div>
                 <h3>Email Newsletter</h3>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Natus nulla dolor nemo corporis dolorum sint dolorem unde adipisci alias quia.</p>
-                <form action="">
-                    <input type="email" placeholder="Enter Email">
+                <form name="Contact" method="post" data-netlify="true">
+                    <input type="email" name="email" placeholder="Enter Email">
                     <input type="submit" value="Subscribe" class="btn btn-primary">
                 </form>
             </div>
