--- a/about.html
+++ b/about.html
@@ -64,7 +64,7 @@
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Natus nulla dolor nemo corporis dolorum sint dolorem unde adipisci alias quia.</p>
                 <h3>Email Newsletter</h3>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Natus nulla dolor nemo corporis dolorum sint dolorem unde adipisci alias quia.</p>
-                <form name="Contact" method="post" data-netlify="true">
+                <form name="Contact" method="POST" data-netlify="true">
                     <input type="email" name="email" placeholder="Enter Email">
                     <input type="submit" value="Subscribe" class="btn btn-primary">
                 </form>
